Favicons are not always loaded. https://bugs.webkit.org/show_bug.cgi?id=143880

Reviewed by Darin Adler.

Source/WebCore:

If the favicon link element(s) in the document does not have a mime type,
the favicon is loaded from the domain root (/favicon.ico). If no favicon
exists at this location, the favicon loading will fail. This can be solved
by not demanding that the link element has a mime type.

Test: fast/dom/icon-url-without-mimetype.html

* loader/icon/IconController.cpp:
(WebCore::iconFromLinkElements): Return the chosen icon URL instead of a vector of URLs.
(WebCore::IconController::url):
(WebCore::iconsFromLinkElements): Deleted.

LayoutTests:

Added new test for icon link elements without mime type.

* fast/dom/icon-url-without-mimetype-expected.txt: Added.
* fast/dom/icon-url-without-mimetype.html: Added.


Canonical link: https://commits.webkit.org/161936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183015 268f45cc-cd09-0410-ab3c-d52691b4dbfc